--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-link": "^1.0.3",
     "react-scripts": "4.0.1",
     "uuid": "^8.3.2",
