--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.1.0",
     "react-link": "^1.0.3",
     "react-scripts": "4.0.1",
+    "sass": "^1.32.6",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
